--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,5 +1,7 @@
 $default-font: "HelveticaNeueCyrRoman", sans-serif
 $helvBold: "HelveticaNeueCyrBold", sans-serif
 $helvMedium: "HelveticaNeueCyrMedium", sans-serif
+$helvLight: "HelveticaNeueCyrLight", sans-serif
+$helvRoman: "HelveticaNeueCyrRoman", sans-serif
 $accent-orange: #F33143
 $acccent-grey: #595c63
