--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -50,10 +50,25 @@ body
 	display: block
 	max-width: 100%
 	height: auto
-
+// duty classes
+.btn
+	font-family: $helvRoman
+	font-size: 15px
+	width: 230px
+	height: 50px
+	background-color: #f33143
+	border-radius: 25px
+	font-size: 15px
+	font-weight: 400
+	line-height: 2.4em
+	color: #fff
+	box-shadow: 0px 13px 100px 0px $accent-orange
+// end duty classes
 // header
 header
-	background: #000
+	color: #fff
+	background-color: #000
+	background: url(../img/bg-header.jpg) no-repeat center
 	.tel-blc
 		text-align: right
 		padding-right: 130px
@@ -64,8 +79,10 @@ header
 			font-size: 14px
 			font-weight: 700
 			text-transform: uppercase
+	.navbar-default
+		border: none
+		background: transparent
 	.navbar
-		background: #000
 		.fa
 			width: 16px
 			height: 10px
@@ -77,7 +94,6 @@ header
 		img[src*=logo]
 			width: 139px
 			height: 51px
-			margin-left: 80px
 			margin-top: -15px
 		.nav
 			.social-icons-navbar
@@ -89,6 +105,7 @@ header
 					&:last-child
 						padding-right: 40px
 		.dropdown-toggle
+			margin-top: -13px
 			color: #e9e9ea
 			font-family: $helvMedium
 			font-size: 15px
@@ -107,7 +124,13 @@ header
 			a
 				padding-left: 0px
 				padding-right: 0px
+				opacity: 0.5
+				color: #bcc2d0
+				&:hover
+					color: #fff !important
+					opacity: 1 !important
 			.shop-btn, .search-btn
+				opacity: 1 
 				position: relative
 				width: 45px
 				height: 45px
@@ -117,16 +140,46 @@ header
 					background-color: #e6e6e6
 					color: $accent-orange
 				.fa
-					opacity: 1
+					opacity: 1 
 					font-size: 18px
 					position: absolute
 					left: 31%
+				.badge
+					position: absolute
+					top: 0
+					right: 0
+					background: $accent-orange
+					color: #fff
+	.active
+		color: #fff !important
+		opacity: 1 !important	
 
 .navbar-default .navbar-nav>li>a
 	color: #e9e9ea
 	font-size: 13px
 	font-weight: 400
-
+// header-section
+.header-section
+	padding-bottom: 65px
+	padding-top: 210px
+	text-align: center
+	h2
+		font-size: 60px
+		font-weight: 300
+		line-height: 71px
+		font-family: $helvLight
+	h1
+		font-size: 100px
+		font-weight: 500
+		line-height: 110px
+		font-family: $helvMedium
+	p
+		font-family: $helvLight
+		font-size: 30px
+		font-weight: 300
+	.btn
+		margin-top: 60px
+// end header-section
 // end header
 
 
