--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,3 +1,4 @@
 @import "../libs/bootstrap/css/bootstrap"
 @import "../libs/Yamm3/yamm/yamm"
+@import "_mixins/mixins"
 @import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
