--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -80,9 +80,18 @@ header
 			font-size: 14px
 			font-weight: 700
 			text-transform: uppercase
+			border-bottom: 1px dashed #fff
 	.navbar-default
 		border: none
 		background: transparent
+		.navbar-toggle
+			border: none
+		.navbar-brand
+			img
+				width: 119px !important
+				height: 41px !important
+				margin-top: -10px !important
+
 	.navbar
 		.fa
 			width: 16px
@@ -91,11 +100,11 @@ header
 		img[src*=Menu-Icon]
 			width: 45px
 			height: 45px
-			
 		img[src*=logo]
 			width: 139px
 			height: 51px
 			margin-top: -15px
+
 		.nav
 			.social-icons-navbar
 				padding-top: 10px
@@ -181,6 +190,9 @@ header
 	.btn
 		margin-top: 60px
 		margin-bottom: 70px
+		&:hover
+			box-shadow: 0px 0px 0px 0px #000
+			color: #fff
 	#myCarousel
 		height: 620px
 		.carousel-indicators
