--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -204,5 +204,87 @@ header
 // end header-section
 // end header
 
+// section-1
+.section-1
+	.col-lg-4
+		padding-right: 0px
+		padding-left: 0px
+	
+	.wrapper-item
+		margin-top: -20px
+		height: 362px
+		position: relative
+		img
+			position: absolute
+			right: 0
+			bottom: 0
+		.wrapper-text-item
+			position: relative
+			padding-left: 52px
+			z-index: 2
+		h2
+			color: #fff
+			font-family: $helvMedium
+			font-size: 62px
+			font-weight: 500
+			line-height: 68px
+		p
+			color: #fff
+			font-family: $helvLight
+			font-size: 36px
+			font-weight: 300
+			line-height: 51px
+	.item-1
+		background-color: #04BBFF
+		h2
+			padding-top: 142px 
+		p 
+			padding-bottom: 106px
+	
+		
+	.item-2
+		background: #E44755
+		h2
+			padding-top: 72px
+			max-width: 235px
+		p
+			padding-bottom: 100px
+	.item-3	
+		background: #29292D
+		h2
+			padding-top: 142px
+			
+		p
+			padding-bottom: 122px
+// end section-1
+
+// section-2
+.section-2
+	background: #F1F1F5
+	padding-top: 92px
+	.item-good
+		margin-top: 20px
+		margin-bottom: 20px
+		box-shadow: 0px 0px 1px 1px #DCDBD3
+		text-align: center
+		.good-img-blc, .good-wide-img-blc
+			position: relative
+			img
+				width: 100%
+		h3
+			padding-top: 30px
+			font-size: 24px
+			font-family: $helvBold
+		p
+			font-size: 18px
+			font-family: $helvLight
+		.btn
+			margin-bottom: 30px
+			box-shadow: 0px 0px 0px 0px 
+			&:hover
+				box-shadow: 0px 13px 100px 0px $accent-orange
+				color: #fff
+
+// end section-2
 
 @import "media" // Всегда в конце
