--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -262,7 +262,7 @@ header
 .section-2
 	background: #F1F1F5
 	padding-top: 92px
-	.item-good
+	.item-good, .item-good-wide
 		margin-top: 20px
 		margin-bottom: 20px
 		box-shadow: 0px 0px 1px 1px #DCDBD3
@@ -277,13 +277,49 @@ header
 			font-family: $helvBold
 		p
 			font-size: 18px
+		
+			padding-bottom: 15px
 			font-family: $helvLight
 		.btn
-			margin-bottom: 30px
+			margin-bottom: 42px
 			box-shadow: 0px 0px 0px 0px 
+
 			&:hover
 				box-shadow: 0px 13px 100px 0px $accent-orange
 				color: #fff
+	.item-good-wide
+		border-bottom: 1px solid #FD2C43
+		position: relative
+		.good-wide-wrapper-text
+			max-width: 405px
+			text-align: left
+			padding-left: 40px
+			h3
+				padding-bottom: 0px
+			span
+				display: inline-block
+				font-size: 18px
+				padding-top: 15px
+				
+				font-family: $helvLight
+			p
+				font-size: 14px
+				font-family: $helvLight
+				padding-bottom: 40px
+		.good-wide-wrapper-action
+			padding-right: 25px
+			padding-top: 10px
+			text-align: right
+			position: absolute
+			top: 0
+			right: 0
+			span
+				font-family: $helvBold
+				font-size: 21px
+				color: #fff
+			.btn
+				display: block	
+
 
 // end section-2
 
