--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -318,9 +318,33 @@ header
 				font-size: 21px
 				color: #fff
 			.btn
-				display: block	
-
-
+				display: block
+	.3rd-row	
+	.item-info
+		padding-top: 60px 
+		text-align: center
+		img
+			padding-bottom: 20px
+		h4
+			margin: 0 auto
+			max-width: 195px
+			font-size: 16px
+			font-family: 
+			color: $helvMedium
+			padding-bottom: 10px
+			color: #595c63
+			font-weight: 500
+			line-height: 20px
+		p
+			margin: 0 auto
+			max-width: 229px
+			font-size: 14px
+			font-family: $helvLight
+			width: 229px
+			color: #595c63
+			opacity: .55
+			font-weight: 300
+			line-height: 20px
 // end section-2
 
 @import "media" // Всегда в конце
