--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -281,6 +281,7 @@ header
 			padding-bottom: 15px
 			font-family: $helvLight
 		.btn
+			width: 70%
 			margin-bottom: 42px
 			box-shadow: 0px 0px 0px 0px 
 
@@ -319,7 +320,8 @@ header
 				color: #fff
 			.btn
 				display: block
-	.3rd-row	
+	.third-row	
+		padding-bottom: 60px
 	.item-info
 		padding-top: 60px 
 		text-align: center
@@ -345,6 +347,29 @@ header
 			opacity: .55
 			font-weight: 300
 			line-height: 20px
+			display: inline
 // end section-2
+
+// section-3
+.section-3
+	background: #18181b
+	color: #fff
+	img
+		padding-top: 200px
+		width: 100%
+	h2
+		padding-top: 200px
+		font-family: $helvBold
+		font-size: 30px
+		font-weight: 700
+		line-height: 70px
+	p
+		font-family: $helvLight
+		font-size: 14px
+		font-weight: 300
+		line-height: 20px
+		&:last-child
+			padding-bottom: 200px
+// end section-3
 
 @import "media" // Всегда в конце
