--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,4 +1,5 @@
 @import "../libs/bootstrap/css/bootstrap"
 @import "../libs/Yamm3/yamm/yamm"
 @import "_mixins/mixins"
+@import "../libs/bourbon/app/assets/stylesheets/_bourbon"
 @import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
