--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -62,8 +62,11 @@ header .navbar-right li .search-btn .fa, header .navbar-right li .shop-btn .fa
 	.section-3
 		img
 			padding-top: 20px
-		
-
+	.pos-abs-to-bottom
+		position: relative	
+	.section-4 .pos-rel
+		+clearfix
+		height: auto
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
@@ -80,6 +83,14 @@ header .navbar-right li .search-btn .fa, header .navbar-right li .shop-btn .fa
 	.section-3
 		h2
 			line-height: normal
+	.section-4
+		h3
+			font-size: 30px
+	 
+	.section-4 .pos-rel
+		+clearfix
+		height: 180px
+	
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
