--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -383,6 +383,7 @@ header
 	background: url(../img/bgsec4.jpg) no-repeat center
 	+bg-size-cover
 	.contacts-blc
+		padding-right: 52px
 		padding-left: 65px
 		padding-top: 70px
 		padding-bottom: 70px
@@ -426,6 +427,8 @@ header
 		line-height: 25px
 		text-decoration: underline
 	.pos-rel
-		
+		+clearfix
+		height: 280px
+
 // end section-4
 @import "media" // Всегда в конце
