--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -517,6 +517,7 @@ footer
 			.input-group
 				margin-top: 20px
 				width: 100%
+				margin-bottom: 20px
 			.search-btn
 				opacity: 1 
 				position: relative
@@ -538,6 +539,7 @@ footer
 				font-weight: 400
 				line-height: 35px
 				z-index: 1
+
 
 					// end footer
 @import "media" // Всегда в конце
