--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -24,10 +24,15 @@
 		.shop-btn, .search-btn
 			display: inline-block
 			.badge
-	header .navbar-right li .search-btn .fa, header .navbar-right li .shop-btn .fa
+	.header-main .navbar-right li .search-btn .fa, .header-main .navbar-right li .shop-btn .fa, .header-others .navbar-right li .search-btn .fa, .header-others .navbar-right li .shop-btn .fa
 		top: 30%		
 	footer .first-row ul li
 		padding-left: 15px
+	// others
+	.header-others
+		.navbar-default
+			background: url(../img/bg-others-nav.png) no-repeat 0px top
+			background-size: 545px 170px
 		/* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
@@ -55,7 +60,7 @@
 	/**/
 	.navbar-nav
 		width: auto
-	header
+	.header-main, .header-others
 		.navbar-right
 			text-align: center
 			li
@@ -67,9 +72,9 @@
 			.shop-btn, .search-btn
 				display: inline-block
 				.badge
-	header .navbar-right li .search-btn .fa, header .navbar-right li .shop-btn .fa
+	.header-main .navbar-right li .search-btn .fa, .header-main .navbar-right li .shop-btn .fa, 	.header-others .navbar-right li .search-btn .fa, .header-others .navbar-right li .shop-btn .fa
 		top: 30%			
-	header .navbar-right li:nth-child(5),.navbar-right li:nth-child(3n)
+	.header-main .navbar-right li:nth-child(5),.navbar-right li:nth-child(3n), .header-others .navbar-right li:nth-child(5),.navbar-right li:nth-child(3n)
 		display: inline	
 	.section-3
 		img
@@ -79,6 +84,11 @@
 	.section-4 .pos-rel
 		+clearfix
 		height: auto
+	// others
+	.header-others
+		.navbar-default
+			background: url(../img/bg-others-nav.png) no-repeat 0px top
+			background-size: 245px 52px
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
