service before owl

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -555,6 +555,7 @@ footer
 // ===================== service page =====================
 .header-others
 	background-color: #fff
+	margin-bottom: -20px
 	.navbar-default
 		background: url(../img/bg-others-nav.png) no-repeat 100px
 		+bg-size-cover
@@ -590,10 +591,109 @@ footer
 		font-weight: 400
 	.tel-blc a
 		border-bottom: 1px dashed #595C63
-	// .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover
-	// 	color: $accent-orange
-	// 	border: 1px solid #F0F0F1 
-	
+// section-1 service
+.section-1-service
+	background: #F1F1F5
+	h3
+		color: #595c63
+		font-family: $helvBold
+		font-size: 48px
+		font-weight: 700
+		line-height: 70px
+		text-align: center
+		padding-top: 65px
+		padding-bottom: 65px
+		margin-bottom: 0px
+// end section-1 service
+// section-2-service
+.section-2-service
+	padding-bottom: 90px
+	background: #F1F1F5
+	.section-2-wrapper
+		background: #fff
+		// under-section-2-1
+		.under-section-2-1
+			img
+				width: 100%
+		// end under-section-2-1
+		// under-section-2-2
+		.under-section-2-2
+			padding-left: 38px
+			padding-right: 38px
+			h4
+				padding-top: 90px
+				padding-bottom: 27px
+				color: #595c63
+				font-family: $helvMedium
+				font-size: 14px
+				font-weight: 500
+				line-height: 25px
+			p
+				font-family: $helvLight
+				max-width: 992px
+				color: #595c63
+				font-size: 14px
+				font-weight: 300
+				line-height: 25px
+				padding-bottom: 89px
+			// end under-section-2-2
+		// under-section-2-3
+		.under-section-2-3
+			background: #F8F8F8
+			.item-service
+				padding-top: 80px
+				text-align: center
+				h4
+					padding-top: 32px
+					padding-bottom: 17px
+					margin: 0 auto
+					max-width: 176px
+					color: #595c63
+					font-family: $helvBold
+					font-size: 14px
+					font-weight: 700
+				p
+					max-width: 992px
+					color: #595c63
+					font-family: $helvLight
+					font-size: 14px
+					font-weight: 300
+					line-height: 20px
+					padding-bottom: 65px
+					
+		// end under-section-2-3
+
+		// under-section-2-4
+		.under-section-2-4
+			padding-top: 70px
+			padding-left: 38px
+			padding-right: 38px
+			padding-bottom: 68px
+			background: #fff
+		ul
+
+			color: #595c63
+			font-family: $helvLight
+			font-size: 14px
+			font-weight: 300
+			
+		p
+			max-width: 992px
+			color: #595c63
+			font-family: $helvLight
+			font-size: 14px
+			font-weight: 300
+			
+			padding-bottom: 
+			a
+				color: #4566b3
+				font-weight: 400
+				border-bottom: 1px dashed #4566b3 
+				&:hover
+					text-decoration: none
+					color: $accent-orange
+		// end under-section-2-4
+// end section-2-service
 // ====================== end serive page ====================
 
 @import "media" // Всегда в конце
