--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -671,12 +671,15 @@ footer
 			padding-bottom: 68px
 			background: #fff
 		ul
-
-			color: #595c63
+			
 			font-family: $helvLight
 			font-size: 14px
 			font-weight: 300
-			
+			li
+				padding-left: 20px
+				color: $accent-orange
+				span
+					color: #595c63
 		p
 			max-width: 992px
 			color: #595c63
