service owl ended, but need modal gallery

--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -3,4 +3,5 @@
 @import "_mixins/mixins"
 @import "../libs/bourbon/app/assets/stylesheets/_bourbon"
 @import "../libs/OwlCarousel2/dist/assets/owl.carousel"
+@import "../libs/MDB/css/mdb"
 @import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
