--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -702,11 +702,12 @@ footer
 			position: relative
 			padding-left: 20px
 			padding-right: 20px
+			.fa-search-plus
+				font-size: 50px
 			.owl-dots
 				text-align: center
 				padding-top: 30px
 				.owl-dot
-					
 					-webkit-border-radius: 20px
 					border-radius: 20px
 					display: inline-block
@@ -719,7 +720,7 @@ footer
 					background: none repeat scroll 0 0 #ACADB1
 			.owl-next, .owl-prev
 				position: absolute
-				top: 30%
+				top: 40%
 			.owl-next
 				right: 0
 			.owl-prev
