some correction after including MDB plugin

--- a/app/libs/MDB/css/mdb.css
+++ b/app/libs/MDB/css/mdb.css
@@ -7135,8 +7135,8 @@ textarea.md-textarea {
   input[type=search-md]:focus:not([readonly]),
   input[type=search]:focus:not([readonly]),
   textarea.md-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #4285F4;
-    box-shadow: 0 1px 0 0 #4285F4; }
+   /* border-bottom: 1px solid #4285F4;
+    box-shadow: 0 1px 0 0 #4285F4;*/ }
     input[type=text]:focus:not([readonly]) + label,
     input[type=password]:focus:not([readonly]) + label,
     input[type=email]:focus:not([readonly]) + label,
