contacts sec1 endning

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -96,6 +96,16 @@
 			padding-bottom: 0px
 			background: url(../img/bg-others-nav.png) no-repeat 0px top
 			background-size: 245px 52px
+	.section-1-contacts
+		.wrapper-adress-blc, .wrapper-time-blc
+			float: none 
+			padding: 0px
+		.wrapper-adress-blc
+			margin-bottom: 20px
+			padding-bottom: 20px
+			border-bottom: 1px solid #777777
+			.wrapper-adress
+				padding-bottom: 20px
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
