--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -106,6 +106,17 @@
 			border-bottom: 1px solid #777777
 			.wrapper-adress
 				padding-bottom: 20px
+	// delivery
+	.section-2-delivery
+		.wrapper-section-2-delivery
+			.wrapper-tab
+				.tabs-control
+					text-align: center
+					
+					a
+						width: 100%
+						display: block
+						
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
