end delivery page

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -107,15 +107,7 @@
 			.wrapper-adress
 				padding-bottom: 20px
 	// delivery
-	.section-2-delivery
-		.wrapper-section-2-delivery
-			.wrapper-tab
-				.tabs-control
-					text-align: center
-					
-					a
-						width: 100%
-						display: block
+	
 						
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
@@ -140,7 +132,14 @@
 	.section-4 .pos-rel
 		+clearfix
 		height: 180px
-
+	.section-2-delivery
+			.section-2-wrapper
+				.wrapper-tab
+					.tabs-control
+						text-align: center
+						a
+							width: 100%
+							display: block
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
