--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -70,6 +70,24 @@ body
 	position: relative
 .margin-0-auto
 	margin: 0 auto
+blockquote
+	color: #595c63
+	font-style: italic
+	font-family: $helvBold
+	font-size: 14px
+	font-weight: 700
+	line-height: 25px
+	border-left: 2px solid $accent-orange
+.important-txt
+	line-height: 25px !important
+	color: $accent-orange !important
+	font-family: $helvMedium !important
+.num
+	list-style: decimal
+	li
+		padding-left: 0px !important
+
+
 // end duty classes
 // header
 .header-main
@@ -614,7 +632,7 @@ footer
 		margin-bottom: 0px
 // end section-1 service
 // section-2-service
-.section-2-service
+.section-2-service, .section-2-delivery
 	padding-bottom: 90px
 	background: #F1F1F5
 	.section-2-wrapper
@@ -623,13 +641,22 @@ footer
 		.under-section-2-1
 			img
 				width: 100%
+				padding-bottom: 90px
 		// end under-section-2-1
 		// under-section-2-2
-		.under-section-2-2
+		.under-section-2-2, .wrapper-section-2-delivery-text
 			padding-left: 38px
 			padding-right: 38px
+			h3
+				color: #595c63
+				font-family: $helvLight
+				font-size: 18px
+				font-weight: 300
+				text-align: center
+				padding-top: 45px
+				padding-bottom: 45px
 			h4
-				padding-top: 90px
+				
 				padding-bottom: 27px
 				color: #595c63
 				font-family: $helvMedium
@@ -643,7 +670,8 @@ footer
 				font-size: 14px
 				font-weight: 300
 				line-height: 25px
-				padding-bottom: 89px
+		.under-section-2-2
+			padding-bottom: 89px	
 			// end under-section-2-2
 		// under-section-2-3
 		.under-section-2-3
@@ -785,7 +813,7 @@ footer
 		bottom: 0
 	// section-2-contacts
 .section-2-contacts
-	padding-top: 60px
+	padding-top: 0px
 	img
 		width: 100% 
 	// end section-2-contacts
@@ -794,12 +822,18 @@ footer
 // section-2-delivery
 .section-2-delivery
 	background: #F1F1F5
-	.wrapper-section-2-delivery-text
-		padding-top: 50px
-	.wrapper-section-2-delivery
-		
+	img
+		max-width: 170px
+		height: 100px
+	.img-wrapper-delivery
+		border: 1px solid #DEDFE1
+		text-align: center
+		padding-top: 20px
+		padding-bottom: 20px
+	.section-2-wrapper
+		padding-bottom: 60px
 		background: #fff
-		margin-bottom: 88px
+		
 
 		.wrapper-tab
 			background: #FEFEFE
