making catalog page

--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -6,3 +6,4 @@
 +font-face("HelveticaNeueCyrLight", "../fonts/HelveticaNeueCyrLight/HelveticaNeueCyr-Light")
 +font-face("HelveticaNeueCyrMedium", "../fonts/HelveticaNeueCyrMedium/HelveticaNeueCyr-Medium")
 +font-face("HelveticaNeueCyrRoman", "../fonts/HelveticaNeueCyrRoman/HelveticaNeueCyr-Roman")
++font-face("RalewayBold", "../fonts/RalewayBold/Raleway-Bold")
