--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -140,6 +140,12 @@
 						a
 							width: 100%
 							display: block
+	.section-1-catalog
+		h2
+			font-size: 70px
+		h3
+			font-size: 40px
+	
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
