--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -3,5 +3,6 @@ $helvBold: "HelveticaNeueCyrBold", sans-serif
 $helvMedium: "HelveticaNeueCyrMedium", sans-serif
 $helvLight: "HelveticaNeueCyrLight", sans-serif
 $helvRoman: "HelveticaNeueCyrRoman", sans-serif
+$RalewayBold: "RalewayBold", sans-serif
 $accent-orange: #F33143
 $acccent-grey: #595c63
