item good hover and tooltip ended

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -891,7 +891,30 @@ footer
 	&:hover
 		border-bottom: 2px solid $accent-orange
 	img
+		margin: 0 auto
 		max-width: 110px
+	.item-good-btn
+		display: inline-block
+		position: relative
+		width: 50px
+		height: 50px
+		background-color: white
+		border-radius: 25px
+		margin-left: 10px
+		&:first-child
+			margin-left: 0px
+		.fa
+				position: absolute
+				top: 30%
+				color: $accent-orange
+				font-size: 	20px
+				&:first-child
+		.fa-chevron-right
+				left: 40%	
+		.fa-shopping-cart
+				left: 30%
+		.fa-bars
+				left: 34%
 	.good-img-blc-catalog
 		padding: 20px
 		position: relative
