catalog all goods ended

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -36,7 +36,11 @@
 		.navbar-default
 			background: url(../img/bg-others-nav.png) no-repeat 0px top
 			background-size: 545px 200px
-
+	.item-good-catalog 
+		.price
+			padding-bottom: 24px
+		.old-price
+			top: 55%
 		/* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
@@ -145,7 +149,7 @@
 			font-size: 70px
 		h3
 			font-size: 40px
-	
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
