--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -884,7 +884,8 @@ footer
 
 // good item for catalog
 .item-good-catalog
-	margin-top: 20px
+	margin-bottom: 10px
+	margin-top: 10px
 	text-align: center
 	box-shadow: 0 0 1px 1px #dcdbd3
 	border-bottom: 2px solid transparent
@@ -924,6 +925,7 @@ footer
 			padding-top: 10px
 			right: 0
 	.item-text-catalog
+		position: relative
 		height: 100%
 		background: #F8F8F8
 	.title, .sub-title
@@ -936,13 +938,27 @@ footer
 		padding-top: 25px
 	.sub-title
 		padding-bottom: 45px
-	.price
+	.price, .old-price
 		color: #595c63
 		font-family: $helvBold
 		font-size: 30px
 		font-weight: 700
 		line-height: 20px
-		padding-bottom: 63px
+		padding-bottom: 74px
+	.old-price
+		top: 45%
+		left: 50%
+		width: 100px
+		margin-left: -50px
+		position: absolute
+		display: inline-block
+		padding-left: 10px
+		padding-right: 10px
+		padding: 0px
+		font-size: 16px
+		text-decoration: line-through $accent-orange 
+
+
 .new-label, .hit-label
 	display: block
 	margin-top: 5px
@@ -956,6 +972,7 @@ footer
 	padding-top: 3px
 	font-size: 11px
 	font-weight: 700
+
 
 	
 // end good item for catalog
