--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -977,7 +977,18 @@ footer
 
 	
 // end good item for catalog
-	// end section-1-catalog
+.bread-crumbs-blc
+	.breadcrumb
+		background: transparent
+		li
+			a
+				opacity: 0.5
+				color: #595c63
+				font-family: $helvRoman
+				font-size: 14px
+			a.active
+				opacity: 1
+	// end section-2-catalog
 // end catalog
 
 // aside-mnu
@@ -1034,6 +1045,8 @@ footer
 	transition: all 0.5s ease
 
 // end aside-mnu
+
+
 // ====================== end serive page ====================
 
 @import "media" // Всегда в конце
