--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -880,6 +880,7 @@ footer
 		font-family: $helvMedium
 		color: #fff
 .section-2-catalog
+	padding-top: 80px
 	background: #F1F1F5
 	.section-2
 		padding-top: 0px
@@ -979,6 +980,8 @@ footer
 // end good item for catalog
 .bread-crumbs-blc
 	.breadcrumb
+		padding-left: 0px
+		padding-bottom: 0px
 		background: transparent
 		li
 			a
@@ -993,7 +996,7 @@ footer
 
 // aside-mnu
 .aside-mnu
-	margin-top: 50px
+	padding-top: 10px
 	ul
 		background: #fff
 		li
@@ -1046,7 +1049,44 @@ footer
 
 // end aside-mnu
 
+// filter-blc
+.filter-blc
+	
+	
+	background: #F8F8F8
+	.filter-good
+		padding-top: 30px
+		padding-bottom: 30px
+		position: relative
+		text-align: center
+		a 
+			&:hover
+				p
+					color: $accent-orange
+		p
+			margin: 0 auto
+			display: block
+			font-family: $helvRoman
+			color: #353535
+			font-size: 14px
+			font-weight: 400
+			line-height: 35px
+		.new-label
+			font-size: 8px
+			font-weight: 700
+			width: 45px
+			height: 15px
+			padding-top: 2px
+		.pos-abs-to-bottom
+			left: 50%
+			margin-left: -22.5px
+			bottom: 20px
+		
 
+						
+
+			
+// end filter-blc
 // ====================== end serive page ====================
 
 @import "media" // Всегда в конце
