jquery ui connected, some changes in slider range

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1081,7 +1081,27 @@ footer
 			left: 50%
 			margin-left: -22.5px
 			bottom: 20px
-		
+	.more-filter-1
+		background: #fff
+$multiRangeHeight: 2em
+input[type="range"][multiple] 
+	display: block
+	height: $multiRangeHeight
+	margin: 0
+	pointer-events: none
+	& + input[type="range"][multiple] 
+	  margin-top: $multiRangeHeight * -1
+	
+
+
+@mixin multirange-thumb 
+	pointer-events: all
+input[type="range"]::-webkit-slider-thumb 
+	@include multirange-thumb
+input[type="range"]::-moz-range-thumb 
+	@include multirange-thumb
+input[type="range"]::-ms-thumb 
+	@include multirange-thumb
 
 						
 
