--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -4,6 +4,6 @@
 @import "../libs/bourbon/app/assets/stylesheets/_bourbon"
 @import "../libs/OwlCarousel2/dist/assets/owl.carousel"
 @import "../libs/MDB/css/mdb"
-
+@import "../libs/jquery-ui/jquery-ui.min"
 
 @import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css")
