--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1094,7 +1094,7 @@ footer
 				border: 2px solid #f2f2f3
 				&::-webkit-input-placeholder 
 					color: #B6B7BA
-				&::-moz-placeholder          
+				&::-moz-placeholder    
 					color: #B6B7BA
 				&:-moz-placeholder          
 					color: #B6B7BA
@@ -1126,9 +1126,63 @@ footer
 		background: transparent
 		top: 0.2em
 		margin-left: -.3em
-						
+	
+[type="radio"]:checked,
+[type="radio"]:not(:checked) 
+	position: absolute
+	left: -9999px
 
-			
+[type="radio"]:checked + label,
+[type="radio"]:not(:checked) + label
+
+	position: relative
+	padding-left: 28px
+	cursor: pointer
+	line-height: 20px
+	display: inline-block
+	color: #666
+
+[type="radio"]:checked + label:before,
+[type="radio"]:not(:checked) + label:before 
+	content: ''
+	
+	position: absolute
+	left: 0
+	top: 0
+	width: 18px
+	height: 18px
+	border: 1px solid #ddd
+	border-radius: 100%
+	background: #fff
+
+[type="radio"]:checked + label:after,
+[type="radio"]:not(:checked) + label:after 
+	content: ''
+	width: 12px
+	height: 12px
+	background: #F87DA9
+	position: absolute
+	top: 3px
+	left: 3px
+	border-radius: 100%
+	-webkit-transition: all 0.2s ease
+	transition: all 0.2s ease
+
+[type="radio"]:not(:checked) + label:after 
+	opacity: 0
+	-webkit-transform: scale(0)
+	transform: scale(0)
+
+[type="radio"]:checked + label:after 
+	opacity: 1
+	-webkit-transform: scale(1)
+	transform: scale(1)
+	
+
+
+
+
+
 // end filter-blc
 // ====================== end serive page ====================
 
